--- a/styles.css
+++ b/styles.css
@@ -1,141 +1,160 @@
 html {
+  overflow-y: scroll;
   scroll-behavior: smooth;
 }
-*{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-  }
-  body{
-    font-family: sans-serif;
-    overflow: hidden;
-    user-select: none;
-  }
+* {
+  list-style: none;
+  text-decoration: none;
+}
+body {
+  font-family: sans-serif;
+  user-select: none;
+}
 
-  nav{
-    height: 100px;
-    background: #063247;
-    box-shadow: 0 3px 15px rgba(0,0,0,.4);
-  }
-  nav ul{
-    display: flex;
-    margin-left: 400px;
-    
-  }
-  nav ul li{
-    display: inline-block;
-    padding: 0.5rem;
+nav {
+  height: 100px;
+  background: #063247;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.4);
+}
+nav ul {
+  display: flex;
+  margin-left: 400px;
+}
+nav ul li {
+  display: inline-block;
+  padding: 0.5rem;
+}
+nav ul li a {
+  color: white;
+  display: block;
+  padding: 0 20px;
+  line-height: 70px;
+  font-size: 24px;
+  background: #063247;
+  transition: 0.5s;
+}
 
-  }
-  nav ul li a{
-    color: white;
-    display: block;
-    padding: 0 20px;
-    line-height: 70px;
-    font-size: 24px;
-    background: #063247;
-    transition: .5s;
-  }
+nav ul .dropdown {
+  position: relative;
+}
 
-  nav ul .dropdown{
-      position: relative;
-  }
+.dropmenu {
+  position: absolute;
+  top: 100%; /* Bottom of button */
+  right: 0;
+  margin-left: -100px; /* More to the left */
+}
+nav ul li a:hover {
+  background-color: azure;
+  color: rgb(6, 6, 61);
+}
 
-  .dropmenu {
-    position: absolute;
-    top: 100%; /* Bottom of button */
-    right: 0;
-    margin-left: -100px; /* More to the left */
-  }
-  nav ul li a:hover{
-   background-color: azure;
-   color: rgb(6, 6, 61);
-  }
-  
-  
-  nav ul ul{
-    position: absolute;
-    top: 85px;
-    border-top: 3px solid #23dbdb;
-    opacity: 0;
-    visibility: hidden;
-    display: flex;
-    flex-direction: column;
-  }
-  nav ul li:hover > ul{
-    top: 70px;
-    opacity: 1;
-    visibility: visible;
-    transition: .3s linear;
-  }
-  nav ul ul li{
-    width: 170px;
-    height: 40px;
+nav ul ul {
+  position: absolute;
+  top: 85px;
+  border-top: 3px solid #23dbdb;
+  opacity: 0;
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+}
+nav ul li:hover > ul {
+  top: 70px;
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s linear;
+}
+nav ul ul li {
+  width: 170px;
+  height: 40px;
 
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    border: 1px solid #042331;
-    border-top: none;
-  }
-  nav ul ul li a{
-    line-height: 50px;
-  }
-  
-  .calculate{
-    display: flex;
-    flex-direction: row;
-    width: 500px;
-    height: 500px;
-    align-items: center;
-    margin-left: 500px;
-  }
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  border: 1px solid #042331;
+  border-top: none;
+}
+nav ul ul li a {
+  line-height: 50px;
+}
 
-  .bmi{
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 50px;
-    border-style: inset;
-     border-color: beige;
-     border-left-width: 4px;
-     border-top-width: 4px;
-     align-items: center;
-  } 
-  .glucose, .sweat{
-     display: flex;
-     flex-direction: column;
-     margin: 50px;
-     padding: 30px;
-     border-style: inset;
-     border-color: beige;
-     border-left-width: 4px;
-     border-top-width: 4px;
-  }
+.calculate {
+  display: flex;
+  flex-direction: row;
+  width: 500px;
+  height: 500px;
+  align-items: center;
+  margin-left: 500px;
+}
 
-  #gvalue, #height, #weight, #sweatvalue{
-    width: 300px;
-    padding: 15px 20px;
-    margin: 15px 0;
-    box-sizing: border-box;
-  
-    border-color: beige;
-    border-left-width : 2px;
-     border-top-width:  2px;
-  }
-  #gvalue:focus, #height:focus, #weight:focus, #sweatvalue:focus{
-  
-      border: 2px inset rgb(75, 78, 76);
-      outline: green;
-    
-  }
-  #btn1, #btn2, #btn3, #btn4{
-  background-color: #4CAF50;
+#heading {
+  padding: 2%;
+}
+
+.description {
+  width: 55%;
+  right: 50%;
+  padding: 3%;
+  border: 1px solid #333;
+  border-radius: 4px;
+}
+
+#image {
+  padding: 2%;
+}
+
+.bmi {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+  border-style: inset;
+  border-color: beige;
+  border-left-width: 4px;
+  border-top-width: 4px;
+  align-items: right;
+}
+.glucose,
+.sweat {
+  display: flex;
+  flex-direction: column;
+  margin: 50px;
+  padding: 30px;
+  border-style: inset;
+  border-color: beige;
+  border-left-width: 4px;
+  border-top-width: 4px;
+}
+
+#gvalue,
+#height,
+#weight,
+#sweatvalue {
+  width: 300px;
+  padding: 15px 20px;
+  margin: 15px 0;
+  box-sizing: border-box;
+
+  border-color: beige;
+  border-left-width: 2px;
+  border-top-width: 2px;
+}
+#gvalue:focus,
+#height:focus,
+#weight:focus,
+#sweatvalue:focus {
+  border: 2px inset rgb(75, 78, 76);
+  outline: green;
+}
+#btn1,
+#btn2,
+#btn3,
+#btn4 {
+  background-color: #4caf50;
   border: none;
   color: white;
   padding: 16px 32px;
@@ -143,5 +162,4 @@ html {
   margin: 4px 2px;
   cursor: pointer;
   width: 300px;
-  }
- 
+}
