--- a/styles.css
+++ b/styles.css
@@ -49,14 +49,14 @@ nav ul li a:hover {
   background-color: azure;
   color: rgb(6, 6, 61);
 }
-nav ul li a.active{
+nav ul li a.active {
   background-color: cornsilk;
 }
 
 nav ul ul {
   position: absolute;
   top: 85px;
-  
+
   opacity: 0;
   visibility: hidden;
   display: flex;
@@ -90,7 +90,7 @@ nav ul ul li a {
   width: 500px;
   height: 400px;
   align-items: center;
-  margin-top: -10px
+  margin-top: -10px;
 }
 
 #heading {
@@ -106,32 +106,30 @@ nav ul ul li a {
   border-width: 4px;
   margin-left: 50px;
   background-color: azure;
-  
 }
- .superclass {
-   display: flex;
-   flex-direction: row;
-   padding: 4px;
- }
- .description2 {
-   width: 500px;
-   height: 500px;
-   border: 1px solid #333;
-   border-radius: 4px;
-   padding: 15px;
-   margin-top: 40px;
-   margin-left: 50px;
-   border-style: solid;
+.superclass {
+  display: flex;
+  flex-direction: row;
+  padding: 4px;
+}
+.description2 {
+  width: 500px;
+  height: 500px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  padding: 15px;
+  margin-top: 40px;
+  margin-left: 50px;
+  border-style: solid;
   border-color: rgb(138, 138, 134);
   border-width: 4px;
   background-color: azure;
-  
- }
+}
 
-  .info{
+.info {
   font-size: 1.4rem;
   background-color: #e7e0e0;
- }
+}
 
 #image {
   padding: 2%;
@@ -201,7 +199,6 @@ nav ul ul li a {
   font-size: 18px;
 }
 
-
 #glucosechart {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -212,18 +209,18 @@ nav ul ul li a {
   border-width: 4px;
   border-style: solid;
   background-color: azure;
-  
 }
 
-#glucosechart td, #glucosechart th {
+#glucosechart td,
+#glucosechart th {
   border: 1px solid rgb(34, 29, 29);
   padding: 10px;
   text-align: center;
 }
 
-
-
-#glucosechart tr:hover {background-color: #ddd;}
+#glucosechart tr:hover {
+  background-color: #ddd;
+}
 
 #glucosechart th {
   padding-top: 12px;
@@ -231,84 +228,161 @@ nav ul ul li a {
   text-align: center;
   background-color: #4caf50;
   color: white;
-  
 }
 
-.user-profile{
+.user-profile {
   display: flex;
   flex-direction: row;
   border-radius: 4px;
-   padding: 15px;
-   margin-top: 20px;
-   margin-left: 50px;
-  
-  
-  
+  padding: 15px;
+  margin-top: 20px;
+  margin-left: 50px;
 }
 
-.user-profile input[type=text], input[type=email], input[type=tel]{
-
-    width: 300px;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #cfcbcb;
-  
+.user-profile input[type="text"],
+input[type="email"],
+input[type="tel"] {
+  width: 300px;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #cfcbcb;
 }
 
-.general, .medical{
+.general,
+.medical {
   height: 800px;
   border-radius: 4px;
-   padding: 15px;
-   margin-top: 10px;
-   margin-left: 50px;
-   border-style: solid;
+  padding: 15px;
+  margin-top: 10px;
+  margin-left: 50px;
+  border-style: solid;
   border-color: rgb(138, 138, 134);
   border-width: 4px;
   background-color: azure;
-  
 }
-.general{
+.general {
   width: 500px;
   margin-left: 20px;
   padding: 30px;
   height: 750px;
 }
 
-#head1, #head2, #head3{
+#head1,
+#head2,
+#head3 {
   font-size: 24px;
   font-weight: bold;
   text-align: center;
 }
 
-.questions{
+.questions {
   font-size: 18px;
   font-weight: bold;
 }
 
-.research{
+.research {
   display: flex;
   flex-direction: row;
 }
-.significance, .circuit{
+.significance,
+.circuit {
   height: 550px;
   width: 500px;
   border-radius: 4px;
-   padding: 25px;
-   margin-top: 60px;
-   margin-left: 80px;
-   border-style: solid;
+  padding: 25px;
+  margin-top: 60px;
+  margin-left: 80px;
+  border-style: solid;
   border-color: rgb(138, 138, 134);
   border-width: 4px;
   background-color: azure;
-  
 }
-.significance{
+.significance {
   margin-left: 250px;
 }
 
-.circuit img{
+.circuit img {
   height: 550px;
   width: 500px;
+}
+
+.tablet {
+  display: block;
+  border: 1px solid #ddd;
+  padding: 3%;
+  margin: 2%;
+  border-radius: 3%;
+  background-color: #ddd;
+  width: 30%;
+}
+
+.morning {
+  position: relative;
+  height: 32%;
+}
+
+.morning:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  /* background-image: url("https://assets.digitalocean.com/labs/images/community_bg.png"); */
+  background-image: url(https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/sunlight_and_your_health_slideshow/493ss_thinkstock_rf_sunrise.jpg?resize=375px:250px&output-quality=50);
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.content {
+  position: relative;
+  padding: 2%;
+}
+.afternoon {
+  position: relative;
+}
+
+.afternoon:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  /* background-image: url("https://assets.digitalocean.com/labs/images/community_bg.png"); */
+  background-image: url(https://media.istockphoto.com/photos/blue-sky-with-bright-sun-and-clouds-picture-id1007768414?k=6&m=1007768414&s=170667a&w=0&h=3aAt0PsS8lsjSc9KvVj9gHpcWo9P121gFbqIx_SBXCk=);
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.night {
+  position: relative;
+}
+
+.night:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  /* background-image: url("https://assets.digitalocean.com/labs/images/community_bg.png"); */
+  background-image: url(https://www.sciencenews.org/wp-content/uploads/2019/09/091119_mt_antisolar_feat.jpg);
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.pill_tablet {
+  align-items: right;
 }
